--- a/physionet-django/environment/templates/tag/environment_action_button.html
+++ b/physionet-django/environment/templates/tag/environment_action_button.html
@@ -2,7 +2,7 @@
     type="button"
     class="environment-action-button {{ button_class }}"
     data-dismiss="modal"
-    onclick="send_request('{{ request_data }}', '{{ http_method }}', '{{ url }}', '{{ button_type }}')"
+    onclick="sendRequest('{{ request_data }}', '{{ http_method }}', '{{ url }}', '{{ button_type }}')"
 >
     {{ button_text }}
 </button>
