--- a/physionet-django/environment/templates/environment/_available_environments_list.html
+++ b/physionet-django/environment/templates/environment/_available_environments_list.html
@@ -29,66 +29,33 @@
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-3">
-                    <strong>
+                    <a href="{% url 'published_project' project.slug project.version %}" target="_blank">
                         {{ project }}
-                    </strong>
+                    </a>
                 </div>
                 <div class="col-md-3">
                     <small>
-                        Instance type: {{ environment.instance_type.value }}<br>
-                        Region: {{ environment.region.value }}<br>
-                        Environment type: {{ environment.type.value }}
+                        <i>Environment type:</i> {{ environment.type.value|capfirst }}<br>
+                        <i>Instance type:</i> {{ environment.instance_type.value }}<br>
+                        <i>Region:</i> {{ environment.region.value }}
                     </small>
                 </div>
                 <div class="col-md-2">
-                    {{ environment.status.value }}
+                    {{ environment.status.value|capfirst }}
                 </div>
                 <div class="col-md-4">
-                    {% if environment.is_running or environment.is_paused %}
-                        <div class="d-flex flex-wrap align-content-stretch">
-                            {% if environment.is_running %}
-                                <button type="button" class="btn btn-link">
-                                    <a href="{{ environment.url }}" target="_blank">Open</a>
-                                </button>
-                                {% environment_modal_button environment=environment button_type="modal_pause" %}
-                            {% else %}
-                                {% environment_modal_button environment=environment button_type="modal_start" %}
-                            {% endif %}
-                            {% environment_modal_button environment=environment button_type="modal_instance" %}
-                            {% environment_modal_button environment=environment button_type="modal_destroy" %}
-                        </div>
-                    {% endif %}
+                    <div class="d-flex flex-wrap">
+                        {% if environment.is_running %}
+                            <a href="{{ environment.url }}" target="_blank" class="btn btn-sm btn-success m-1">Open</a>
+                            {% environment_modal_button environment=environment button_type="modal_pause" %}
+                        {% else %}
+                            {% environment_modal_button environment=environment button_type="modal_start" %}
+                        {% endif %}
+                        {% environment_modal_button environment=environment button_type="modal_instance" %}
+                        {% environment_modal_button environment=environment button_type="modal_destroy" %}
+                    </div>
                 </div>
             </div>
         </li>
     {% endfor %}
 </ul>
-
-{% block local_js_bottom %}
-<script>
-    const sendRequest = (function() {
-        const csrfToken = getCookie("csrftoken");
-
-        return function(request_data, http_method, url, button_type) {
-            let data = request_data;
-            if (button_type === "update") {
-                const instance = $("#form-select option:selected").text();
-                if (instance === "") return;
-
-                data = JSON.parse(data);
-                data["instance_type"] = instance;
-                data = JSON.stringify(data)
-            }
-            fetch(url, {
-                method: http_method,
-                body: data,
-                credentials: "same-origin",
-                headers: {
-                    "X-CSRFToken": csrfToken,
-                    "Content-Type": "application/json",
-                },
-            });
-        }
-    })();
-</script>
-{% endblock %}
