--- a/physionet-django/environment/templates/environment/_available_projects_list.html
+++ b/physionet-django/environment/templates/environment/_available_projects_list.html
@@ -3,12 +3,12 @@
         <div class="row">
             <div class="col-md-8">
                 <strong>
-                    Name
+                    Project
                 </strong>
             </div>
             <div class="col-md-4">
                 <strong>
-                    Action
+                    Actions
                 </strong>
             </div>
         </div>
@@ -17,11 +17,11 @@
         <li class="list-group-item">
             <div class="row">
                 <div class="col-md-8">
-                    <strong>
+                    <a href="{% url 'published_project' project.slug project.version %}" target="_blank">
                         {{ project }}
-                    </strong>
+                    </a>
                 </div>
-                <div class="col-md-4 text-right">
+                <div class="col-md-4">
                 {% if environment is None %}
                     <a class="btn btn-sm btn-primary" href="{% url 'create_research_environment' project_slug=project.slug project_version=project.version %}">
                         Launch Research Environment
