Disallow actions while workspace is being initially created

--- a/physionet-django/environment/templates/environment/research_environments.html
+++ b/physionet-django/environment/templates/environment/research_environments.html
@@ -80,6 +80,7 @@
           {% include "environment/_available_projects_list.html" %}
         </div>
       </div>
+    </div>
   </div>
 </div>
 {% endblock %}
