--- a/physionet-django/environment/templates/environment/research_environments.html
+++ b/physionet-django/environment/templates/environment/research_environments.html
@@ -1,30 +1,6 @@
-{% extends 'base.html' %}
-
-{% load static %}
-
-{% load project_templatetags %}
-
-{% block title %}Research environments{% endblock %}
-
-{% block local_css %}
-<link rel="stylesheet" type="text/css" href="{% static 'environment/css/environment-base.css' %}">
-{% endblock %}
-
-{% block local_js_top %}
-<script src="{% static 'custom/js/cookie.js' %}"></script>
-{% endblock %}
-
-{% block content %}
-<div class="container">
-  {% include "message_snippet.html" %}
-  <div class="jumbotron">
-    <h1>Research Environments Home</h1>
-    <p class="lead">
-      Here you can manage the research environments for your projects.
-    </p>
-  </div>
-
-  <div class="card" >
+{% extends 'environment/base_environment_home.html' %}
+{% block main_view %}
+    <div class="card" >
     <div class="card-header">
       <ul class="nav nav-tabs card-header-tabs">
         <li class="nav-item">
@@ -82,10 +58,8 @@
       </div>
     </div>
   </div>
-</div>
 {% endblock %}
 
-{% block local_js_bottom %}
 <script>
     const sendRequest = (function() {
         const csrfToken = getCookie("csrftoken");
@@ -112,4 +86,3 @@
         }
     })();
 </script>
-{% endblock %}
