--- a/physionet-django/project/templates/project/citation_box.html
+++ b/physionet-django/project/templates/project/citation_box.html
@@ -1,3 +1,4 @@
+{% load project_templatetags %}
 <div class="alert alert-secondary">
 
   {% if "The PhysioNet/Computing in Cardiology Challenge" in project.title %}
@@ -57,12 +58,13 @@
       {% endif %}
     {% endif %}
   {% endif %}
-
-  <p>
-    <strong>Please include the standard citation for {{ SITE_NAME }}:</strong>
-    <a href="#citationModalPlatform" data-toggle="modal">(show more options)</a>
-    <br><span>{{ platform_citations.APA }}</span>
-  </p>
+  {% if SHOW_PLATFORM_WIDE_CITATION %}
+      <p>
+        <strong>Please include the standard citation for {{ SITE_NAME }}:</strong>
+        <a href="#citationModalPlatform" data-toggle="modal">(show more options)</a>
+            <br><span>{{ platform_citations.APA }}</span>
+      </p>
+  {% endif %}
 
   {% include 'modal_start.html' with id_name='citationModalPlatform' title='Cite' %}
   <table><tbody>
