--- a/physionet-django/environment/templates/environment/_available_environments_list.html
+++ b/physionet-django/environment/templates/environment/_available_environments_list.html
@@ -46,15 +46,13 @@
                 <div class="col-md-4">
                     <div class="d-flex flex-wrap">
                         {% if environment.is_running or environment.is_paused %}
-                            {% if environment.is_running %}
-                                <a href="{{ environment.url }}" target="_blank" class="btn btn-sm btn-success m-1">Open</a>
-                                {% environment_modal_button environment=environment button_type="modal_pause" %}
-                            {% else %}
-                                {% environment_modal_button environment=environment button_type="modal_start" %}
-                            {% endif %}
-                            {% environment_modal_button environment=environment button_type="modal_instance" %}
-                            {% environment_modal_button environment=environment button_type="modal_destroy" %}
+                            <a href="{{ environment.url }}" target="_blank" class="btn btn-sm btn-success m-1">Open</a>
+                            {% environment_modal_button environment=environment project=project button_type="modal_pause" %}
+                        {% else %}
+                            {% environment_modal_button environment=environment project=project button_type="modal_start" %}
                         {% endif %}
+                        {% environment_modal_button environment=environment project=project button_type="modal_instance" %}
+                        {% environment_modal_button environment=environment project=project button_type="modal_destroy" %}
                     </div>
                 </div>
             </div>
