--- a/physionet-django/environment/templates/tag/environment_modal_button.html
+++ b/physionet-django/environment/templates/tag/environment_modal_button.html
@@ -24,7 +24,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
-        {% environment_action_button button_type=action_button_type environment=environment %}
+        {% environment_action_button button_type=action_button_type environment=environment project=project %}
       </div>
     </div>
   </div>
