--- a/physionet-django/environment/templates/environment/workspace_being_provisioned.html
+++ b/physionet-django/environment/templates/environment/workspace_being_provisioned.html
@@ -4,7 +4,7 @@
     <div class="card text-center" style="width: 30rem; margin: auto">
       <div class="card-body">
         <h5 class="card-title">Your workspace is being provisioned...</h5>
-        <p class="card-text">It might take about 7 minutes</p>
+        <p class="card-text">It will take around 5 minutes.</p>
           <div class="loader">Loading...</div>
       </div>
     </div>
@@ -13,7 +13,6 @@
 {% block local_js_bottom %}
 <script>
     const csrfToken = getCookie("csrftoken");
-    let workspaceInterval = setInterval(checkWorkspaceStatus, 30000);
     function checkWorkspaceStatus() {
         fetch("{% url "is_workspace_setup_done" %}",{
             method: 'GET',
@@ -26,5 +25,8 @@
         .then(response => response.json())
         .then(data => data.is_done && location.reload());
      }
+
+    const thirty_seconds = 30000;
+    setInterval(checkWorkspaceStatus, thirty_seconds);
 </script>
 {% endblock %}
