--- a/physionet-django/environment/templates/tag/environment_action_button.html
+++ b/physionet-django/environment/templates/tag/environment_action_button.html
@@ -1,7 +1,6 @@
 <button
     type="button"
-    class="environment-action-button {{ button_class }}"
-    data-dismiss="modal"
+    class="environment-action-button inside-modal-button {{ button_class }}"
     onclick="sendRequest('{{ request_data }}', '{{ http_method }}', '{{ url }}', '{{ button_type }}')"
 >
     {{ button_text }}
