--- a/physionet-django/environment/templates/tag/environment_modal_button.html
+++ b/physionet-django/environment/templates/tag/environment_modal_button.html
@@ -1,8 +1,8 @@
 {% load action_buttons %}
-<button type="button" class="btn btn-sm {{ button_class }} m-1" data-toggle="modal" data-target="#{{ modal_title|cut:' ' }}">
+<button type="button" class="btn btn-sm {{ button_class }} m-1" data-toggle="modal" data-target="#{{ modal_id }}">
   {{ button_text }}
 </button>
-<div class="modal fade" id={{ modal_title|cut:' ' }} tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+<div class="modal fade" id="{{ modal_id }}" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
   <div class="modal-dialog modal-dialog-centered" role="document">
     <div class="modal-content">
       <div class="modal-header">
