--- a/physionet-django/console/templates/console/base_console.html
+++ b/physionet-django/console/templates/console/base_console.html
@@ -10,7 +10,7 @@
     {% block local_css %}{% endblock %}
     {% include "base_js_top.html" %}
     {% block local_js_top %}{% endblock %}
-    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.ico' %}"/>
+    <link rel="shortcut icon" type="image/png" href="{% static 'favicon.png' %}"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
   </head>
 
